<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/night">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="10.0dip"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/source"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <TextView
                    android:id="@+id/api_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:padding="5.0dip"
                    android:text="@string/source_desc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/statement"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:lineSpacingExtra="3.0dip"
                    android:padding="5.0dip"
                    android:text="@string/statement_desc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/now_version"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10.0dip"
                        android:lineSpacingExtra="3.0dip"
                        android:padding="5.0dip" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/final_compile"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:lineSpacingExtra="3.0dip"
                    android:padding="5.0dip"
                    android:text="@string/final_compile_time" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/test_model"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:lineSpacingExtra="3.0dip"
                    android:padding="5.0dip"
                    android:text="@string/test_model_desc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/cache"
                android:textSize="15.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <TextView
                    android:id="@+id/cache"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:lineSpacingExtra="3.0dip"
                    android:padding="5.0dip" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/open_source"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/open_source_library"
                android:textSize="15.0sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>